add_library(RuntimeCommonInput
            IController.hpp
            CDolphinController.hpp
            CKeyboardController.hpp
            CMouseController.hpp
            ControlMapper.hpp ControlMapper.cpp
            CInputGenerator.hpp CInputGenerator.cpp
            CFinalInput.hpp CFinalInput.cpp)
