add_library(RuntimeCommonInput
            IController.hpp
            CKeyboardMouseController.hpp
            ControlMapper.hpp ControlMapper.cpp
            CInputGenerator.hpp CInputGenerator.cpp
            CFinalInput.hpp CFinalInput.cpp
            CRumbleManager.hpp CRumbleManager.cpp
            CRumbleGenerator.hpp CRumbleGenerator.cpp
            CRumbleVoice.hpp CRumbleVoice.cpp)
